# Storage-Appliance-Architecture

./: .gitignore  .mailmap  README.md  go.mod  go.sum
pstorage/: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  test_integration.sh
pstorage/docker/: Dockerfile  Dockerfile.linux-dev  docker-compose.yml
pstorage/docs/: NUDD-analysis.md  api-reference.md  e2e-testing-guide.md  linux-vm-setup.md  nvme-architecture.md
pstorage/scripts/: setup-linux-vm.sh
pstorage/src/pstorage/: __init__.py
pstorage/src/pstorage/activecluster/: __init__.py  cluster.py  failover.py  mediator.py  replication.py
pstorage/src/pstorage/analytics/: __init__.py  predictor.py
pstorage/src/pstorage/api/: __init__.py  main.py
pstorage/src/pstorage/api/routes/: __init__.py  analytics.py  metrics.py  replication.py  snapshots.py  volumes.py
pstorage/src/pstorage/core/: __init__.py  config.py  controller.py  snapshot_manager.py  volume_manager.py
pstorage/src/pstorage/directflash/: __init__.py  block_manager.py  garbage_collection.py  simulator.py  wear_leveling.py
pstorage/src/pstorage/purity/: __init__.py  compression.py  deduplication.py  engine.py  pattern_removal.py
pstorage/src/pstorage/storage/: __init__.py  backend.py  file_backend.py
pstorage/tests/: __init__.py
pstorage/tests/test_activecluster/: __init__.py
pstorage/tests/test_analytics/: test_predictor.py
pstorage/tests/test_api/: test_volumes.py
pstorage/tests/test_directflash/: __init__.py
pstorage/tests/test_purity/: __init__.py  test_compression.py  test_deduplication.py
(+40 files in other folders)
